# achernar

./: .gitignore  Cargo.toml  Makefile  README.md  grammar.ebnf  grammar.peg  grammar.txt  minigrammar.peg  test  zig.peg
bootstrap1/: Makefile  README.md  compile_commands.json
bootstrap1/bak/: ast_to_hir.c
bootstrap1/comlib/: .com_allocator.c.kak.BLxYHp  com_allocator.c  com_allocator.h  com_allocator_os.c  com_allocator_os.h  com_allocator_os_noleak.c  com_allocator_os_noleak.h  com_allocator_passthrough.c  com_allocator_passthrough.h  com_assert.c  com_assert.h  com_bigdecimal.c  com_bigdecimal.h  com_bigint.c  com_bigint.h  com_biguint.c  com_biguint.h  com_define.h  com_fmath.c  com_fmath.h  com_format.c  com_format.h  com_hash.c  com_hash.h  com_hashtable.c  com_hashtable.h  com_imath.c  com_imath.h  com_json.c  com_json.h  com_math.h  com_mem.c  com_mem.h  com_os_allocator.c  com_os_allocator.h  com_os_exit.h  com_os_io.h  com_os_io_in.h  com_os_io_out.c  com_os_io_out.h  (+36 more)
bootstrap1/obsolete_for_now/: ast_to_hir.h  hash.c  hashtable.h  hir.h
bootstrap1/src/: .hir.h.kak.NR0POq  allocator.h  ast.c  ast.h  ast_parse.c  ast_parse.h  ast_print.c  ast_to_hir.c  ast_to_hir.h  ast_to_json.c  ast_to_json.h  code_to_ast.c  code_to_ast.h  code_to_tokens.c  code_to_tokens.h  com_allocator.c  com_allocator.h  com_allocator_passthrough.c  com_allocator_passthrough.h  com_assert.c  com_assert.h  com_bigint.h  com_define.h  com_ensure.c  (+39 more)
bootstrap2/: Root_peg_parser_model.dot  compiler.py  grammar.peg  grammar.py  grammar_peg.py  peggrammar_parse_tree.dot  peggrammar_parser_model.dot  testprogram.acn  visitor_pattern.py
c/: Makefile
comlib/: com_allocator.c  com_allocator.h  com_allocator_passthrough.c  com_bigdecimal.h  com_bigint.h  com_biguint.c  com_biguint.h  com_fmath.h  com_hash.c  com_hashtable.h  com_mem.c  com_mem.h  com_os_exit.h  com_os_time.h  com_queue.h  com_reader.h  com_scan.c  com_str.c  com_str.h  com_strcopy.c  com_strcopy.h  com_vec.h  com_writer_null.h
example/: chained.acn  chained.bp  comment.acn  comment.bp  countsort.bp  expr.bp  function.acn  function.bp  hello.acn  hello.bp  macro.acn  match.acn  match.bp  mod.acn  multi_line.acn  struct.acn  struct.bp  types.acn
inc/: constants.h  lex.h  vector.h
rust/: Cargo.toml
rust/src/: ast.rs  astbuilder.rs  codereader.rs  diagnostic.rs  dlogger.rs  hir.rs  hirbuilder.rs  main.rs  mir.rs  mirbuilder.rs  reader.rs  span.rs  token.rs  tokenize.rs
src/: arena.c  arena.h  ast.c  ast.h  ast.rs  ast_to_hir.c  ast_to_hir.h  ast_to_json.c  astbuilder.rs  code_to_tokens.c  code_to_tokens.h  constants.h  diagnostic.c  diagnostic.h  dlogger.rs  error.c  error.h  eval_ast.c  eval_hir.c  eval_hir.h  find_free_vars.rs  hash.h  hir.h  hir.rs  hir2.rs  hirbuilder.rs  hirbuilder2.rs  hireval.rs  identifier.h  json.c  json.h  lex.c  lex.h  lexer.c  lexer.h  linalloc.c  linalloc.h  linearAllocator.c  linearAllocator.h  lncol.h  (+34 more)
(+143 files in other folders)
