[package]
name = "achernar"
version = "0.1.0"
authors = ["gpi <gpimpale29@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }
num-bigint =  { version = "0.4.3", features = ["serde"] }
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.15"
lsp-types = "0.94.0"
peekmore = "1.3.0"
strum = { version = "0.25.0", features = ["derive"] }
bumpalo = { version = "3.13.0", features = ["allocator_api"] }
hashbrown = { version = "0.14.0", features = ["nightly"] }
z3 = "0.11.2"
