[package]
name = "achernar"
version = "0.1.0"
authors = ["gpi <gpimpale29@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-bigint =  { version = "^0.4", features = ["serde"] }
num-rational = { version = "^0.4", features = ["serde"] }
num-traits = "^0.2"
lsp-types = "^0.88"
peekmore = "^1.0.0"
strum = { version = "0.20", features = ["derive"] }
bumpalo = { version = "3.4.0", features = ["allocator_api"] }
z3 = "^0.10"
hashbrown = "0.11.2"
