[package]
name = "achernar"
version = "0.1.0"
authors = ["gpi <gpimpale29@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
num-bigint =  { version = "0.4.2", features = ["serde"] }
num-rational = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.14"
lsp-types = "0.89.2"
peekmore = "1.0.0"
strum = { version = "0.21.0", features = ["derive"] }
bumpalo = { version = "3.7.0", features = ["allocator_api"] }
z3 = "0.11.2"
hashbrown = "0.11.2"
